make console expand when tapped anywhere, fix overflow in console
- fixes the overflow issue in the embed consoles
- fixes usability issue where console expand button is hard to click.
  Now the the console can be expanded by clicking anywhere on the panel
  header.

closes #1232

--- a/web/experimental/styles.scss
+++ b/web/experimental/styles.scss
@@ -194,6 +194,7 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  cursor: pointer;
 }
 
 #console-output-footer {
@@ -201,15 +202,15 @@ body {
   flex-direction: column;
   padding-left: 8px;
   padding-bottom: 8px;
+  overflow: auto;
 }
 
-#console-expand-button {
+#console-expand-icon {
   color: $label-color;
   padding: 8px;
-  margin: -4px;
 }
 
-#console-expand-button:focus {
+#console-expand-icon:focus {
   outline: none;
 }
 
@@ -230,7 +231,6 @@ body {
 
 #editor-container {
   flex: 1;
-  overflow: hidden;
 }
 
 #tab-container {
@@ -238,7 +238,6 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: row;
 }
 
 // Footer
